# eleve

./: .gitignore  DTrie.pyx  LM.py  MANIFEST.in  Makefile  README.rst  eval.py  requirements.dev.txt  setup.py  standalone.py  storage.py  tokenisation.py  tokenisation_pl.py  utils.py  webservice.py
TP/: MondeDiplo.sample
benchmark/: benchmark_text.py  benchmark_trie.py  benchmark_wikipedia.py  neo_benchmark.py  segmentation.py
docs/: Makefile  conf.py  index.rst  make.bat  segmenter.rst  storage.rst  storage_api.rst  trie.rst  trie_api.rst
docs/api/: api.rst  eleve.c_leveldb.rst  eleve.c_memory.rst  eleve.leveldb.rst  eleve.memory.rst  eleve.rst  eleve.segment.rst  eleve.storage.rst
eleve/: DTrie.pyx  DTrie_sqlite.py  LM.py  __init__.py  api.py  client.py  cython_storage.pyx  eleve.py  eval.py  incremental_memory.py  kenleve.py  kenlm_storage.py  leveldb.pxd  leveldb.py  leveldb.pyx  leveldb_storage.py  lm.py  mem_trie.py  memory.py  memory_storage.py  merge.py  neo4j.py  nlptypes.py  postproc.py  segment.py  segmentation.py  segmenter.py  setup.py  storage.py  tokenisation.py  tokenisation_pl.py  trie_storage.py  utils.py  webservice.py
eleve/c_leveldb/: CMakeLists.txt  Makefile  config.hpp  leveldb_node.cpp  leveldb_node.hpp  leveldb_storage.cpp  leveldb_storage.hpp  leveldb_trie.cpp  leveldb_trie.hpp  python.cpp  swig.i
eleve/c_low_memory/: blist.hpp  trie_lowlevel.cpp
eleve/c_memory/: CMakeLists.txt  Makefile  block.hpp  child_list.cpp  child_list.hpp  config.hpp  entropy.hpp  index_block.hpp  index_list.cpp  index_list.hpp  leaf_block.cpp  leaf_block.hpp  list.hpp  list_block.cpp  list_block.hpp  memory_storage.cpp  memory_storage.hpp  memory_trie.cpp  memory_trie.hpp  node.cpp  node.hpp  python.cpp  python.hpp  single_child_list.cpp  single_child_list.hpp  single_leaf_block.hpp  test.py  trie.cpp  trie_lowlevel.cpp  unique_leaf_block.hpp  unique_list_block.cpp  unique_list_block.hpp
eleve/preprocessing/: __init__.py  chinese.py
eleve/storage/: __init__.py  base.py  incremental_memory.py  memory.py  trivial.py
scripts/: eleve-chinese  eleve-train  progressive_pruning.py  test_nbest.py
test/: benchmark_text.py  benchmark_trie.py  benchmark_wikipedia.py  neo_benchmark.py  segmentation.py  test_lm.py  test_segmenter.py  test_storage.py  test_tokenisation_fr.py  test_trie.py
test/fixtures/: btree.txt
tests/: conftest.py  test_segmenter.py  test_storage.py  test_trie.py  utils.py
